--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -111,7 +111,7 @@
                
                <div class="col-md-12" >  
                     <ul class="list-group" style="margin-top: 12px">
-					  	<li class="list-group-item" style="display: none">
+					  	<li class="list-group-item">
 					  		<i class="fa fa-tags" aria-hidden="true"></i> <b> In Accounts: </b> 
 					  		[<span class="data_field" id="profileInAccounts" > </span> ]
 					  	</li>
