save Touchpoint Name and URL in Tracking Event

--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -34,7 +34,12 @@
 	div.segment_download_link {
 		float: right; padding-top: 5px; font-weight: bold; font-size: 15px;
 	}
-	
+	.rule-container .rule-value-container:last-child {
+	  	min-width: 320px;
+	}
+	.rule-container .rule-value-container:last-child input{
+	  	width: 100%;
+	}
 </style>
 
 <div class="row">
