update segment and improve performance

--- a/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
@@ -18,7 +18,7 @@ th.sorting, th.sorting_desc, th.sorting_asc {
 		<h5 class="page-header" id="page_breadcrumb" > </h5>
 	</div>
 	<div class="col-lg-4 text-right" style="padding: 10px">
-		<button type="button" class="btn btn-do-now" onclick="location.reload()" title="Refresh Profile List" > 
+		<button type="button" class="btn btn-do-now" onclick="refreshAllSegments()" title="Refresh data of all segments" > 
     		<i class="fa fa-refresh" aria-hidden="true"></i> Refresh
     	</button>
 		<button type="button" class="btn btn-goto-router data-control-insert" onclick="newSegmentBuilder()">
