--- a/resources/app-templates/leocdp-admin/modules/activation/data-connector-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/data-connector-list.html
@@ -2,10 +2,10 @@
 <!-- Data Connector Services -->
 
 <div class="row">
-	<div class="col-lg-12">
+	<div class="col-lg-10">
 		<h5 class="page-header" id="page_breadcrumb"></h5>
 	</div>
-	<div class="col-lg-2 text-right" style="padding: 10px; display: none;">
+	<div class="col-lg-2 text-right" style="padding: 10px;">
 		<button type="button" class="btn btn-goto-router data-control-insert" onclick="underDevelopment(this)" title="Install New Data Connector" >
 			<i class="fa fa-plus-circle" aria-hidden="true"></i> New Data Connector
 		</button>
