--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -120,13 +120,13 @@
 						<a id="Account_Management" href="#calljs-leoCdpRouter('Business_Account_Management')" title="All Business Accounts" > 
 							<i class="fa fa-fw fa-briefcase"></i> Business Accounts </a>
 					</li>
+					<li id="Segment_Management_Menu" >
+						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" title="All Customer Segments"> 
+							<i class="fa fa-object-group" aria-hidden="true"></i> Data Segmentation </a>
+					</li>
 					<li id="Profile_Management_Menu" >
 						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" title="All Customer Profiles" > 
 							<i class="fa fa-fw fa-user-circle-o"></i> Customer Data Profiles </a>
-					</li>
-					<li id="Segment_Management_Menu" >
-						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" title="All Customer Segments"> 
-							<i class="fa fa-object-group" aria-hidden="true"></i> Customer Segments </a>
 					</li>
 				</ul>
 			</li>
