UX improvement, fix bugs new segment

--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-funnel.html
@@ -354,7 +354,7 @@
 			        { name: "eventLabel", title : "Event Label", align: 'center' , type: "text", width: 116, validate: "required" },
 			        { name: "score", title : "Event Score", type: "number", align: 'center', width: 40, validate: "required" },
 			        { name: "cumulativePoint", title : "Loyalty Point", type: "number", width: 38, align: 'center', validate: "required" },
-			        { name: "eventStageId", title : "Journey Stage", type: "select", items: journeyFunnelStages, valueField: "id", textField: "name" },
+			        { name: "eventStageId", title : "Default Journey Stage", type: "select", items: journeyFunnelStages, valueField: "id", textField: "name" },
 			        { name: "scoreModel", title : "Score Model", type: "select", items: scoringModels, width: 80, valueField: "id", textField: "name" },
 			        { name: "funnelStageId", title : "Default Profile Stage", type: "select", items: customerFunnelStages, valueField: "id", textField: "name" },
 			        { name: "metricType", type: "select", title : "Metric Type", items: metricTypes, align: 'center', width: 68, valueField: "id", textField: "name" }
