update and fix bugs

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -122,11 +122,11 @@
 					</li>
 					<li id="Segment_Management_Menu" >
 						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" title="All Customer Segments"> 
-							<i class="fa fa-object-group" aria-hidden="true"></i> Data Segmentation </a>
+							<i class="fa fa-object-group" aria-hidden="true"></i> Segment Management </a>
 					</li>
 					<li id="Profile_Management_Menu" >
 						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" title="All Customer Profiles" > 
-							<i class="fa fa-fw fa-user-circle-o"></i> Customer Data Profiles </a>
+							<i class="fa fa-fw fa-user-circle-o"></i> Profile Management </a>
 					</li>
 				</ul>
 			</li>
