fix bugs and add fingerprintId into TrackingEvent

--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -37,7 +37,7 @@
 			</div>
 			<div class="col-md-4">
             	<div class="panel panel-business">
-            		<div class="panel-heading"> <h3 class="panel-title text-center"> Customer Metrics in Total</h3> </div>
+            		<div class="panel-heading"> <h3 class="panel-title text-center"> Key Business Metrics in Total</h3> </div>
 				  	<div class="panel-body" id="sales_metrics_holder" >
 				  	</div>
 				</div>
