--- a/resources/app-templates/target-media/short-link-click.html
+++ b/resources/app-templates/target-media/short-link-click.html
@@ -2,20 +2,15 @@
 <html>
 <head>
 	<title>LEO Click Tracking: {{{customData.productName}}}</title>
-	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
 </head>
 <body style="text-align: center;">
 	
 	<i class="fa fa-cog fa-spin fa-5x fa-fw"></i>
 	<span class="sr-only">Loading...</span>
-	
 	<script>
 		var referer = "{{{customData.referer}}}";
-		//
 		var srcTouchpointName = "LEO Click Tracking: {{{customData.productName}}}";
 		
 	    //LEO Web Observer for channel: 
@@ -27,8 +22,8 @@
    		var idType = "{{customData.productIdType}}";
 		var productIds = "{{customData.productId}}";
 		
-		// to set ID from server
-		var injectedVisitorId = "{{customData.injectedVisitorId}}";
+		// to set ID from server if refVisitorId is stored in the TargetMediaUnit 
+		var injectedVisitorId = "{{customData.injectedVisitorId}}".trim();
 		
 		// for click direction to landing page
 		var targetMediaUrl = "{{{customData.targetMediaUrl}}}";
@@ -48,25 +43,34 @@
 		    s.parentNode.insertBefore(jsNode, s);
 		})();
 		
+		function doClickAction(webVisitorId){
+			var eventData = {"landingPageUrl" : targetMediaUrl, "productIds": productIds, "idType":idType };
+			eventData['adId'] = "{{{customData.adId}}}";
+			eventData['placementId'] = "{{{customData.placementId}}}";
+			eventData['campaignId'] = "{{{customData.campaignId}}}";
+			LeoObserverProxy.recordActionEvent("short-link-click", eventData);
+			
+			// wait for event data is sent to server, then redirect
+			setTimeout(function(){
+				if( targetMediaUrl.indexOf('?') < 0 ) {
+					targetMediaUrl += '?';
+				} else {
+					targetMediaUrl += '&';
+				}
+				targetMediaUrl += ('leosyn='+webVisitorId);
+				location.href = targetMediaUrl;
+			},800)
+		}
+		
 		function leoObserverProxyReady(session) {
 			if(typeof window.targetMediaUrl === 'string' && window.targetMediaUrl.indexOf('http') === 0 ){
-				var eventData = {"landingPageUrl" : targetMediaUrl, "productIds": productIds, "idType":idType };
-				eventData['adId'] = "{{{customData.adId}}}";
-				eventData['placementId'] = "{{{customData.placementId}}}";
-				eventData['campaignId'] = "{{{customData.campaignId}}}";
-				LeoObserverProxy.recordActionEvent("short-link-click", eventData);
-				
-				setTimeout(function(){
-					if( targetMediaUrl.indexOf('?') < 0 ) {
-						targetMediaUrl += '?';
-					} else {
-						targetMediaUrl += '&';
-					}
-					
-					var synid = injectedVisitorId;
-					targetMediaUrl += ('leosyn='+synid);
-					location.href = targetMediaUrl;
-				},1000)
+				if(injectedVisitorId === "") {
+					// if injectedVisitorId is empty, then load from localStoreage and synch
+					LeoObserverProxy.synchLeoVisitorId(doClickAction);
+				}
+				else {
+					doClickAction(injectedVisitorId);
+				}
 			} 
 		}
 	</script>
