can use HTTP admin server for intranet network

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -8,16 +8,16 @@
 	<meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=4, user-scalable=1" name="viewport"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=100"/>
 	
-	<base href="https://{{baseAdminApiUrl}}/">
+	<base href="//{{baseAdminApiUrl}}/">
 	
 	<title> {{pageTitle}} </title>
 	<meta name="description" content="LEO CDP Admin"/>
 
-	<link rel="apple-touch-icon" sizes="180x180" href="https://{{baseAdminApiUrl}}/public/images/leocdp-icon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://{{baseAdminApiUrl}}/public/images/leocdp-icon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://{{baseAdminApiUrl}}/public/images/leocdp-icon/favicon-16x16.png">
-	<link rel="manifest" href="https://{{baseAdminApiUrl}}/public/images/leocdp-icon/site.webmanifest">
-	<link rel="mask-icon" href="https://{{baseAdminApiUrl}}/public/images/leocdp-icon/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="apple-touch-icon" sizes="180x180" href="//{{baseAdminApiUrl}}/public/images/leocdp-icon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="//{{baseAdminApiUrl}}/public/images/leocdp-icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="//{{baseAdminApiUrl}}/public/images/leocdp-icon/favicon-16x16.png">
+	<link rel="manifest" href="//{{baseAdminApiUrl}}/public/images/leocdp-icon/site.webmanifest">
+	<link rel="mask-icon" href="//{{baseAdminApiUrl}}/public/images/leocdp-icon/safari-pinned-tab.svg" color="#5bbad5">
 	
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
@@ -211,7 +211,7 @@
 	<script src="https://{{baseStaticUrl}}/js/filepond/config-filepond.js?_={{cacheBustingKey}}"></script>
 	
 	<!-- i18n Data Model -->
-	<script src="https://{{baseAdminApiUrl}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
 </head>
 
 <body>
@@ -251,24 +251,24 @@
 	</script>
 	
 	<!-- LEO Admin Core -->
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leo.admin.common.js?admin=1&_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.router.js?admin=1&_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.router.functions.js?admin=1&_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.core-admin.js?admin=1&_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.visualization.js?admin=1&_={{cacheBustingKey}}"></script>
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.journey.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leo.admin.common.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.router.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.router.functions.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.core-admin.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.visualization.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.journey.js?admin=1&_={{cacheBustingKey}}"></script>
 	
 	<!-- asset: group-details  -->
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.digital.asset.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.digital.asset.js?admin=1&_={{cacheBustingKey}}"></script>
 	
 	<!-- profile -->
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.profile.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.profile.js?admin=1&_={{cacheBustingKey}}"></script>
 	
 	<!-- segment -->
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.segmentation.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.segmentation.js?admin=1&_={{cacheBustingKey}}"></script>
 	
 	<!-- feedback survey -->
-	<script src="https://{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.feedback.survey.js?admin=1&_={{cacheBustingKey}}"></script>
+	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.feedback.survey.js?admin=1&_={{cacheBustingKey}}"></script>
 	
 </body>
 
