update for new features and improve Ui UX

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -35,6 +35,7 @@
 		var baseLeoObserverUrl = location.protocol + '//' + baseLeoObserverDomain;
 		
 		var pageHeaderLogo =  '{{pageHeaderLogo}}';
+		var promoVisibility =  '{{promoVisibility}}';
 		
 		var webTemplateCache = "{{webTemplateCache}}" === "true";
 		var hasB2Bfeatures = "{{hasB2Bfeatures}}" === "true";
