--- a/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
@@ -172,7 +172,7 @@ th.sorting, th.sorting_desc, th.sorting_asc {
                     },
                     {
                         "render": function (data, type, row) {
-                            return  '<div class="segment_size" style="width:96px" ><mark>' +  data.toLocaleString() + '</mark></div>';
+                            return  '<div class="segment_size highlight_text" style="width:96px" ><mark>' +  data.toLocaleString() + '</mark></div>';
                         },
                         "targets": 5
                     },
