--- a/resources/app-templates/leocdp-admin/modules/asset/item-creative-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-creative-editor.html
@@ -201,7 +201,7 @@
                 // off select post type  $('#postTypeSelectionDialog').modal({ focus: true })
                 postTypeSelectionCallback(1);//default post type is text
             }
-            var urlStr = baseLeoAdminUrl + '/item/get';
+            var urlStr = baseLeoAdminUrl + '/cdp/asset-item/get';
 
             LeoAdminApiUtil.callPostAdminApi(urlStr, params, function (json) {
                 if (json.httpCode === 0 && json.errorMessage === '') {
@@ -301,7 +301,7 @@
             }            
 
             //done set data model, POST to API
-            var urlStr = baseLeoAdminUrl + '/item/save';
+            var urlStr = baseLeoAdminUrl + '/cdp/asset-item/save';
             LeoAdminApiUtil.callPostAdminApi(urlStr, postModel, function (json) {
                 if (json.httpCode === 0 && json.errorMessage === '') {
                     if (typeof callback === 'function') {
