--- a/resources/app-templates/leocdp-admin/modules/asset/item-post-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-post-editor.html
@@ -215,7 +215,7 @@
                 // off select post type  $('#postTypeSelectionDialog').modal({ focus: true })
                 postTypeSelectionCallback(1);//default post type is text
             }
-            var urlStr = baseLeoAdminUrl + '/item/get';
+            var urlStr = baseLeoAdminUrl + '/cdp/asset-item/get';
 
             LeoAdminApiUtil.callPostAdminApi(urlStr, params, function (json) {
                 if (json.httpCode === 0 && json.errorMessage === '') {
@@ -339,7 +339,7 @@
         		});
                 
                 //done set data model, POST to API
-                var urlStr = baseLeoAdminUrl + '/item/save';
+                var urlStr = baseLeoAdminUrl + '/cdp/asset-item/save';
                 LeoAdminApiUtil.callPostAdminApi(urlStr, itemData, function (json) {
                     if (json.httpCode === 0 && json.errorMessage === '') {
                         if (typeof callback === 'function') {
