--- a/resources/app-templates/leocdp-admin/modules/asset/item-template-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-template-editor.html
@@ -178,7 +178,7 @@
             
             console.log('=====> load template editor for id ' + itemId);
 
-            var urlStr = baseLeoAdminUrl + '/item/get';
+            var urlStr = baseLeoAdminUrl + '/cdp/asset-item/get';
 
             LeoAdminApiUtil.callPostAdminApi(urlStr, params, function (json) {
                 if (json.httpCode === 0 && json.errorMessage === '') {
@@ -289,7 +289,7 @@
             	}
             	
             	//done set data model, POST to API
-                var urlStr = baseLeoAdminUrl + '/item/save';
+                var urlStr = baseLeoAdminUrl + '/cdp/asset-item/save';
                 LeoAdminApiUtil.callPostAdminApi(urlStr, htmlTemplateData, function (json) {
                     if (json.httpCode === 0 && json.errorMessage === '') {
                         if (typeof callback === 'function') {
