--- a/resources/app-templates/leocdp-admin/modules/asset/post-item-info.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/post-item-info.html
@@ -75,7 +75,7 @@
             var categoryId = params.categoryId;
             //console.log('view post ' + itemId);
 
-            var urlStr = baseLeoAdminUrl + '/item/get';
+            var urlStr = baseLeoAdminUrl + '/cdp/asset-item/get';
            
             LeoAdminApiUtil.callPostAdminApi(urlStr, params, function (json) {
                 if (json.httpCode === 0 && json.errorMessage === '') {
@@ -174,7 +174,7 @@
     function previewPost(aNode) {
     	// FIXME
     	var contentBaseUrl = 'https://bookstore.bigdatavietnam.org';
-        var url = contentBaseUrl + '/html/item/' + $(aNode).data('slug');
+        var url = contentBaseUrl + '/html/cdp/asset-item/' + $(aNode).data('slug');
         var win = window.open(url, '_blank');
         win.focus();
     }
