--- a/resources/app-templates/target-media/short-link-click.html
+++ b/resources/app-templates/target-media/short-link-click.html
@@ -11,7 +11,7 @@
 	<span class="sr-only">Loading...</span>
 	<script>
 		var referer = "{{{customData.referer}}}";
-		var srcTouchpointName = "LEO Click Tracking: {{{customData.productName}}}";
+		var srcTouchpointName = "{{{customData.srcTouchpointName}}}";
 		
 	    //LEO Web Observer for channel: 
    		var leoObserverLogDomain = "{{{baseLeoObserverUrl}}}";
