fix sort by updated date of profile

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -503,7 +503,9 @@ th.sorting, th.sorting_desc, th.sorting_asc {
                     }
                 ],
                 'columns': tableSchema,
-                'order': [[7, 'desc']]
+                
+                // sort by the updated datetime of profile
+                'order': [[8, 'desc']]
             });
         }
     }    
