--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -120,13 +120,13 @@
 						<a id="Account_Management" href="#calljs-leoCdpRouter('Business_Account_Management')" title="All Business Accounts" > 
 							<i class="fa fa-fw fa-briefcase"></i> Business Accounts </a>
 					</li>
-					<li id="Segment_Management_Menu" >
-						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" title="All Customer Segments"> 
-							<i class="fa fa-object-group" aria-hidden="true"></i> Segment Management </a>
-					</li>
 					<li id="Profile_Management_Menu" >
 						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" title="All Customer Profiles" > 
 							<i class="fa fa-fw fa-user-circle-o"></i> Profile Management </a>
+					</li>
+					<li id="Segment_Management_Menu" >
+						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" title="All Customer Segments"> 
+							<i class="fa fa-object-group" aria-hidden="true"></i> Segment Management </a>
 					</li>
 				</ul>
 			</li>
@@ -138,12 +138,12 @@
 				</a>
 				<ul id="data_activation_hub_menu" class="collapse in" aria-expanded="true">
 					<li>
-						<a id="Digital_Data_Asset" href="#calljs-leoCdpRouter('Digital_Data_Asset')" title="Digital Data Asset Management" > 
-							<i class="fa fa-fw fa-list" ></i> Data Asset Categories </a>
+						<a id="Digital_Asset_Management" href="#calljs-leoCdpRouter('Digital_Asset_Management')" title="Digital Asset Management" > 
+							<i class="fa fa-fw fa-list" ></i> Digital Asset Management </a>
 					</li>
 					<li id="Connector_Management_Menu" style="display: none;" >
 						<a id="Connector_Management" href="#calljs-leoCdpRouter('Connector_Management')">
-							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Data Connectors </a>
+							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Connector Management</a>
 					</li>
 				</ul>
 			</li>
